--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/home.css">
 
     <!-- Title -->
     <title>
@@ -124,7 +124,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li><a href="/login.html">Login</a></li>
+                            <li><a href="/signin.html">Login</a></li>
                         </ul>
                     </div>
                 </div>
