Added hosting file and removed extra options from footer

--- a/home.html
+++ b/home.html
@@ -651,8 +651,8 @@
                             Premium Hosting
                         </h5>
                         <ul>
-                            <li><a href="/hosting.html">Premium Web Hosting</a></li>
-                            <li><a href="/hosting.html">Premium VPS Hosting</a></li>
+                            <li><a href="/hosting.html#web">Premium Web Hosting</a></li>
+                            <li><a href="/hosting.html#vps">Premium VPS Hosting</a></li>
                         </ul>
                     </div>
 
@@ -695,11 +695,9 @@
                             Game Hosting
                         </h5>
                         <ul>
-                            <li><a href="/hosting.html">Minecraft Hosting</a></li>
-                            <li><a href="/hosting.html">Rust Hosting</a></li>
-                            <li><a href="/hosting.html">ARK Hosting</a></li>
-                            <li><a href="/hosting.html">Garry's Mod Hosting</a></li>
-                            <li><a href="/hosting.html">Valheim Hosting</a></li>
+                            <li><a href="/hosting.html#minecraft">Minecraft Hosting</a></li>
+                            <li><a href="/hosting.html#rust">Rust Hosting</a></li>
+                            <li><a href="/hosting.html#ark">ARK Hosting</a></li>
                         </ul>
                     </div>
 
@@ -708,8 +706,8 @@
                             Discord Bot Hosting
                         </h5>
                         <ul>
-                            <li><a href="/hosting.html">Discord Bot Hosting</a></li>
-                            <li><a href="/hosting.html">Discord Bot Maker</a></li>
+                            <li><a href="/hosting.html#discord">Discord Bot Hosting</a></li>
+                            <li><a href="/hosting.html#discord">Discord Bot Maker</a></li>
                         </ul>
                     </div>
                 </div>
