Update page titles

--- a/reset-password.html
+++ b/reset-password.html
@@ -51,7 +51,7 @@
 
     <!-- Title -->
     <title>
-        HostThing | Reset Password
+        Reset Password | HostThing
     </title>
 </head>
 
