Update metadata descriptions and links

--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Metadata -->
-    <meta name="description" content="Details about HostThing's hosting services and plans.">
+    <meta name="description" content="Add items to your cart, and checkout.">
     <meta name="keywords"
         content="hostthing, hostthing.com, hostthing web hosting, hostthing hosting, hostthing domain names, hostthing email hosting, hostthing web hosting services, hostthing domain names services, hostthing email hosting services">
     <meta name="author" content="HostThing">
@@ -16,14 +16,13 @@
     <meta name="og:type" property="og:type" content="website">
     <meta name="og:url" property="og:url" content="https://hostthing.com">
     <meta name="og:image" property="og:image" content="https://hostthing.com/public/images/og.webp">
-    <meta name="og:description" property="og:description"
-        content="Details about HostThing's hosting services and plans.">
+    <meta name="og:description" property="og:description" content="Add items to your cart, and checkout.">
     <meta name="og:site_name" property="og:site_name" content="HostThing">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@hostthing">
     <meta name="twitter:creator" content="@hostthing">
     <meta name="twitter:title" content="HostThing">
-    <meta name="twitter:description" content="Details about HostThing's hosting services and plans.">
+    <meta name="twitter:description" content="Add items to your cart, and checkout.">
     <meta name="twitter:image" content="https://hostthing.com/public/images/og.webp">
     <meta name="twitter:image:alt" content="HostThing">
     <meta name="twitter:domain" content="hostthing.com">
@@ -103,7 +102,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="/report.html">
+                                <li><a class="dropdown-item" href="/support.html">
                                         Report Abuse
                                     </a></li>
                             </ul>
