--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="/report.html">
+                                <li><a class="dropdown-item" href="/support.html">
                                         Report Abuse
                                     </a></li>
                             </ul>
