--- a/hosting.html
+++ b/hosting.html
@@ -103,7 +103,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="/support.html">
+                                <li><a class="dropdown-item" href="/contact.html">
                                         Report Abuse
                                     </a></li>
                             </ul>
@@ -1445,7 +1445,6 @@
                             Company
                         </h5>
                         <ul>
-                            <li><a href="/about.html">About Us</a></li>
                             <li><a href="/contact.html">Contact Us</a></li>
                             <li><a href="/privacy.html">Privacy Policy</a></li>
                             <li><a href="/tos.html">Terms of Service</a></li>
@@ -1457,9 +1456,9 @@
                             Support
                         </h5>
                         <ul>
-                            <li><a href="/support.html">Support Center</a></li>
-                            <li><a href="/support.html">Submit Ticket</a></li>
-                            <li><a href="/support.html">Knowledgebase</a></li>
+                            <li><a href="/contact.html">Support Center</a></li>
+                            <li><a href="/contact.html">Submit Ticket</a></li>
+                            <li><a href="/contact.html">Knowledgebase</a></li>
                         </ul>
                     </div>
 
@@ -1497,7 +1496,7 @@
                         <i class="fab fa-instagram"></i>
                     </a>
                 </span>
-                PeerAmp &copy; 2024
+                DRVGO &copy; 2024
             </p>
         </div>
     </footer>
