--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Metadata -->
-    <meta name="description" content="Get domains of your choice at affordable prices.">
+    <meta name="description" content="Contact HostThing for any questions, concerns, or abuse reports.">
     <meta name="keywords"
         content="hostthing, hostthing.com, hostthing web hosting, hostthing hosting, hostthing domain names, hostthing email hosting, hostthing web hosting services, hostthing domain names services, hostthing email hosting services">
     <meta name="author" content="HostThing">
@@ -16,13 +16,14 @@
     <meta name="og:type" property="og:type" content="website">
     <meta name="og:url" property="og:url" content="https://hostthing.com">
     <meta name="og:image" property="og:image" content="https://hostthing.com/public/images/og.webp">
-    <meta name="og:description" property="og:description" content="Get domains of your choice at affordable prices.">
+    <meta name="og:description" property="og:description"
+        content="Contact HostThing for any questions, concerns, or abuse reports.">
     <meta name="og:site_name" property="og:site_name" content="HostThing">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@hostthing">
     <meta name="twitter:creator" content="@hostthing">
     <meta name="twitter:title" content="HostThing">
-    <meta name="twitter:description" content="Get domains of your choice at affordable prices.">
+    <meta name="twitter:description" content="Contact HostThing for any questions, concerns, or abuse reports.">
     <meta name="twitter:image" content="https://hostthing.com/public/images/og.webp">
     <meta name="twitter:image:alt" content="HostThing">
     <meta name="twitter:domain" content="hostthing.com">
@@ -47,11 +48,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./styles/domains.css">
+    <link rel="stylesheet" href="./styles/contact.css">
 
     <!-- Title -->
     <title>
-        Domains | HostThing
+        Contact Us | HostThing
     </title>
 </head>
 
@@ -131,199 +132,68 @@
 
     <!-- Main -->
     <main>
-        <section class="container banner_section">
-            <h1>
-                Search for
-                <span class="brand_highlight">
-                    Domains
-                </span>
-            </h1>
-
-            <div class="domain_settings">
-                <form>
-                    <input type="text" placeholder="Search for a domain name">
-                    <input type="submit" value="Search">
-                </form>
-
-                <div class="transfer_domain">
-                    <p>or</p>
-                    <a href="./cart.html">Transfer</a>
-                </div>
-            </div>
-
-            <div class="domain_cards_ad">
-                <div class="ad_card">
-                    <h3>
-                        Free .com Domains on any Premium Plan
-                    </h3>
-
-                    <p>
-                        The world's most popular domain extension is about to get a lot more popular with a sweet deal
-                        like this. All Premium & Business web hosting plans include free domains!
-                    </p>
-
-                    <div>
-                        <a href="./hosting.html">Get Started</a>
-                    </div>
-                </div>
-
-                <div class="ad_card">
-                    <h3>
-                        Domains for Less Than a Soft Drink
-                    </h3>
-
-                    <p>
-                        Get a popular domain today! Don't miss our biggest domain sale ever! Have a domain in mind? Use
-                        our search bar above to see if your domain is still available.
-                    </p>
-
-                    <div>
-                        <a href="./domains.html">
-                            View Sale
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="container faq_section">
+        <section class="container contact_section">
             <h2>
-                Frequently Asked
-                <span class="brand_highlight">
-                    Questions
-                </span>
+                Contact Us
             </h2>
 
-            <div class="accordion accordion-flush" id="accordionExample" data-bs-theme="dark">
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            How Long Are Domain Registered For?
-                        </button>
-                    </h2>
+            <form>
+                <div class="grouped_form">
+                    <div class="form_content">
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName" name="firstName" placeholder="John" required>
+                    </div>
 
-                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            When you buy a domain name from us, the registration period is 1 year. Starting from when
-                            you buy the domain and the order is active. By default domains are automatically renewed, so
-                            you don't accidentally lose your domain to a different bidder. However, automatic renewals
-                            can be turned off.
-                        </div>
+                    <div class="form_content">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName" name="lastName" placeholder="Doe" required>
                     </div>
                 </div>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Do Domains Comes With a Refund Policy?
-                        </button>
-                    </h2>
+                <div class="grouped_form">
+                    <div class="form_content">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="xyz@xyz.com" required>
+                    </div>
 
-                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            Purchased domains do not come with a refund policy. We recommend finding a domain you are
-                            happy with, before purchasing your domain.
-                        </div>
+                    <div class="form_content">
+                        <label for="phone">Phone</label>
+                        <input type="tel" id="phone" name="phone" placeholder="+91-123-456-7890" required>
                     </div>
                 </div>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Can I Purchase a Domain Without Hosting?
-                        </button>
-                    </h2>
-
-                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <p>
-                                Yes, you can purchase a domain without web hosting. This means you'll solely own the
-                                domain,
-                                but can't publish anything to it. So users won't be able to visit your domain.
-                            </p>
-
-                            <p>
-                                Reasons for wanting a domain without hosting may include:
-                            </p>
-
-                            <ul>
-                                <li>
-                                    Wanting to secure a domain name and not having a website ready.
-                                </li>
-                                <li>
-
-                                    Buying multiple similar domains and redirecting them to your main website.
-                                </li>
-                                <li>
-                                    Buying a domain with the intention to sell it for profit.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="form_content">
+                    <label for="subject">Subject</label>
+                    <select class="form-select" aria-label="Subject" data-bs-theme="dark" required>
+                        <option selected disabled>
+                            Select Subject
+                        </option>
+                        <option value="1">
+                            General Inquiry
+                        </option>
+                        <option value="2">
+                            Sales
+                        </option>
+                        <option value="3">
+                            Help & Support
+                        </option>
+                        <option value="4">
+                            Abuse
+                        </option>
+                        <option value="5">
+                            Other
+                        </option>
+                    </select>
                 </div>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            Can I Transfer My Domain to Another Registrar?
-                        </button>
-                    </h2>
-
-                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <p>
-                                Yes, you can transfer your domain to another registrar. However, you must wait 60 days
-                                after
-                                purchasing your domain to transfer it. This is a ICANN policy, which we must follow.
-                            </p>
-
-                            <p>
-                                To transfer your domain, you must first unlock it. Then you must request an EPP code.
-                                Once you have the EPP code, you can transfer your domain to another registrar.
-                            </p>
-
-                            <p>
-                                If you need help transferring your domain, please contact our support team.
-                            </p>
-                        </div>
-                    </div>
+                <div class="form_content">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" placeholder="Your message here..." required
+                        rows="8"></textarea>
                 </div>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                            What is an SSL Certificate?
-                        </button>
-                    </h2>
-
-                    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <p>
-                                SSL is an abbreviation of 'Secure Sockets Layer', which is a global standard for
-                                encrypting communications between a browser and a web server. Most web browsers require
-                                your website to have an SSL certificate installed. You can see if a website has an SSL
-                                certificate installed if it has a padlock icon in the URL bar and the link is 'https://'
-                                rather than 'http://' (the 's' stands for secure).
-                            </p>
-
-                            <p>
-                                Practically, an SSL certificate makes data transferred between your website and its'
-                                users unreadable to someone trying to do something malicious, such as hacking. For
-                                example, if your users need to fill in personal details when signing up for a newsletter
-                                or making a purchase, the data needs to travel from their computer to your website's
-                                server. Without an SSL certificate, this data is readable on its journey to the server,
-                                however with an SSL certificate, this data now becomes encrypted and is therefore
-                                unreadable.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <input type="submit" value="Submit">
+            </form>
         </section>
     </main>
 
