--- a/tos.html
+++ b/tos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Metadata -->
-    <meta name="description" content="Get domains of your choice at affordable prices.">
+    <meta name="description" content="Read HostThing's Terms of Services.">
     <meta name="keywords"
         content="hostthing, hostthing.com, hostthing web hosting, hostthing hosting, hostthing domain names, hostthing email hosting, hostthing web hosting services, hostthing domain names services, hostthing email hosting services">
     <meta name="author" content="HostThing">
@@ -16,13 +16,13 @@
     <meta name="og:type" property="og:type" content="website">
     <meta name="og:url" property="og:url" content="https://hostthing.com">
     <meta name="og:image" property="og:image" content="https://hostthing.com/public/images/og.webp">
-    <meta name="og:description" property="og:description" content="Get domains of your choice at affordable prices.">
+    <meta name="og:description" property="og:description" content="Read HostThing's Terms of Services.">
     <meta name="og:site_name" property="og:site_name" content="HostThing">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@hostthing">
     <meta name="twitter:creator" content="@hostthing">
     <meta name="twitter:title" content="HostThing">
-    <meta name="twitter:description" content="Get domains of your choice at affordable prices.">
+    <meta name="twitter:description" content="Read HostThing's Terms of Services.">
     <meta name="twitter:image" content="https://hostthing.com/public/images/og.webp">
     <meta name="twitter:image:alt" content="HostThing">
     <meta name="twitter:domain" content="hostthing.com">
@@ -47,11 +47,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./styles/domains.css">
+    <link rel="stylesheet" href="./styles/tos.css">
 
     <!-- Title -->
     <title>
-        Domains | HostThing
+        Terms of Services | HostThing
     </title>
 </head>
 
@@ -131,199 +131,77 @@
 
     <!-- Main -->
     <main>
-        <section class="container banner_section">
-            <h1>
-                Search for
-                <span class="brand_highlight">
-                    Domains
-                </span>
-            </h1>
+        <section class="container tos_section">
+            <h1>Website Terms and Conditions of Use</h1>
 
-            <div class="domain_settings">
-                <form>
-                    <input type="text" placeholder="Search for a domain name">
-                    <input type="submit" value="Search">
-                </form>
+            <h2>1. Terms</h2>
 
-                <div class="transfer_domain">
-                    <p>or</p>
-                    <a href="./cart.html">Transfer</a>
-                </div>
-            </div>
+            <p>By accessing this Website, accessible from https://hostthing.com, you are agreeing to be bound by these
+                Website Terms and Conditions of Use and agree that you are responsible for the agreement with any
+                applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this
+                site. The materials contained in this Website are protected by copyright and trade mark law.</p>
 
-            <div class="domain_cards_ad">
-                <div class="ad_card">
-                    <h3>
-                        Free .com Domains on any Premium Plan
-                    </h3>
+            <h2>2. Use License</h2>
 
-                    <p>
-                        The world's most popular domain extension is about to get a lot more popular with a sweet deal
-                        like this. All Premium & Business web hosting plans include free domains!
-                    </p>
+            <p>Permission is granted to temporarily download one copy of the materials on HostThing's Website for
+                personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of
+                title, and under this license you may not:</p>
 
-                    <div>
-                        <a href="./hosting.html">Get Started</a>
-                    </div>
-                </div>
+            <ul>
+                <li>modify or copy the materials;</li>
+                <li>use the materials for any commercial purpose or for any public display;</li>
+                <li>attempt to reverse engineer any software contained on HostThing's Website;</li>
+                <li>remove any copyright or other proprietary notations from the materials; or</li>
+                <li>transferring the materials to another person or "mirror" the materials on any other server.</li>
+            </ul>
 
-                <div class="ad_card">
-                    <h3>
-                        Domains for Less Than a Soft Drink
-                    </h3>
+            <p>This will let HostThing to terminate upon violations of any of these restrictions. Upon termination, your
+                viewing right will also be terminated and you should destroy any downloaded materials in your possession
+                whether it is printed or electronic format. These Terms of Service has been created with the help of the
+                <a href="https://www.termsofservicegenerator.net">Terms Of Service Generator</a>.
+            </p>
 
-                    <p>
-                        Get a popular domain today! Don't miss our biggest domain sale ever! Have a domain in mind? Use
-                        our search bar above to see if your domain is still available.
-                    </p>
+            <h2>3. Disclaimer</h2>
 
-                    <div>
-                        <a href="./domains.html">
-                            View Sale
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <p>All the materials on HostThing's Website are provided "as is". HostThing makes no warranties, may it be
+                expressed or implied, therefore negates all other warranties. Furthermore, HostThing does not make any
+                representations concerning the accuracy or reliability of the use of the materials on its Website or
+                otherwise relating to such materials or any sites linked to this Website.</p>
 
-        <section class="container faq_section">
-            <h2>
-                Frequently Asked
-                <span class="brand_highlight">
-                    Questions
-                </span>
-            </h2>
+            <h2>4. Limitations</h2>
 
-            <div class="accordion accordion-flush" id="accordionExample" data-bs-theme="dark">
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            How Long Are Domain Registered For?
-                        </button>
-                    </h2>
+            <p>HostThing or its suppliers will not be hold accountable for any damages that will arise with the use or
+                inability to use the materials on HostThing's Website, even if HostThing or an authorize representative
+                of this Website has been notified, orally or written, of the possibility of such damage. Some
+                jurisdiction does not allow limitations on implied warranties or limitations of liability for incidental
+                damages, these limitations may not apply to you.</p>
 
-                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            When you buy a domain name from us, the registration period is 1 year. Starting from when
-                            you buy the domain and the order is active. By default domains are automatically renewed, so
-                            you don't accidentally lose your domain to a different bidder. However, automatic renewals
-                            can be turned off.
-                        </div>
-                    </div>
-                </div>
+            <h2>5. Revisions and Errata</h2>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Do Domains Comes With a Refund Policy?
-                        </button>
-                    </h2>
+            <p>The materials appearing on HostThing's Website may include technical, typographical, or photographic
+                errors. HostThing will not promise that any of the materials in this Website are accurate, complete, or
+                current. HostThing may change the materials contained on its Website at any time without notice.
+                HostThing does not make any commitment to update the materials.</p>
 
-                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            Purchased domains do not come with a refund policy. We recommend finding a domain you are
-                            happy with, before purchasing your domain.
-                        </div>
-                    </div>
-                </div>
+            <h2>6. Links</h2>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Can I Purchase a Domain Without Hosting?
-                        </button>
-                    </h2>
+            <p>HostThing has not reviewed all of the sites linked to its Website and is not responsible for the contents
+                of any such linked site. The presence of any link does not imply endorsement by HostThing of the site.
+                The use of any linked website is at the user's own risk.</p>
 
-                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <p>
-                                Yes, you can purchase a domain without web hosting. This means you'll solely own the
-                                domain,
-                                but can't publish anything to it. So users won't be able to visit your domain.
-                            </p>
+            <h2>7. Site Terms of Use Modifications</h2>
 
-                            <p>
-                                Reasons for wanting a domain without hosting may include:
-                            </p>
+            <p>HostThing may revise these Terms of Use for its Website at any time without prior notice. By using this
+                Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use.</p>
 
-                            <ul>
-                                <li>
-                                    Wanting to secure a domain name and not having a website ready.
-                                </li>
-                                <li>
+            <h2>8. Your Privacy</h2>
 
-                                    Buying multiple similar domains and redirecting them to your main website.
-                                </li>
-                                <li>
-                                    Buying a domain with the intention to sell it for profit.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+            <p>Please read our Privacy Policy.</p>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            Can I Transfer My Domain to Another Registrar?
-                        </button>
-                    </h2>
+            <h2>9. Governing Law</h2>
 
-                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <p>
-                                Yes, you can transfer your domain to another registrar. However, you must wait 60 days
-                                after
-                                purchasing your domain to transfer it. This is a ICANN policy, which we must follow.
-                            </p>
-
-                            <p>
-                                To transfer your domain, you must first unlock it. Then you must request an EPP code.
-                                Once you have the EPP code, you can transfer your domain to another registrar.
-                            </p>
-
-                            <p>
-                                If you need help transferring your domain, please contact our support team.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                            What is an SSL Certificate?
-                        </button>
-                    </h2>
-
-                    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <p>
-                                SSL is an abbreviation of 'Secure Sockets Layer', which is a global standard for
-                                encrypting communications between a browser and a web server. Most web browsers require
-                                your website to have an SSL certificate installed. You can see if a website has an SSL
-                                certificate installed if it has a padlock icon in the URL bar and the link is 'https://'
-                                rather than 'http://' (the 's' stands for secure).
-                            </p>
-
-                            <p>
-                                Practically, an SSL certificate makes data transferred between your website and its'
-                                users unreadable to someone trying to do something malicious, such as hacking. For
-                                example, if your users need to fill in personal details when signing up for a newsletter
-                                or making a purchase, the data needs to travel from their computer to your website's
-                                server. Without an SSL certificate, this data is readable on its journey to the server,
-                                however with an SSL certificate, this data now becomes encrypted and is therefore
-                                unreadable.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <p>Any claim related to HostThing's Website shall be governed by the laws of us without regards to its
+                conflict of law provisions.</p>
         </section>
     </main>
 
